--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "mongoose": "^6.3.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
